--- a/sigma.html
+++ b/sigma.html
@@ -102,33 +102,35 @@
             </section>
 
         </header>
-        <section class="">
-            <figure class="position-relative  ">
-                <img src="assets/img/memphis-1.jpg" class="sdimg w-100 object-fit-cover" alt="">
-                <img src="assets/img/person-edited-1.png" class="position-absolute imgabs " alt="">
-                <figcaption class="position-absolute figabs">
-                    <h4>
-                        welcom to
-                    </h4>
-                    <h2>
-                        Town And Municipal Wordpress Theme
-                    </h2>
-                    <p>
-                        Beautifull neighborhoods , extraordinary schools , great resturant and a rich history make our
-                        city
-                    </p>
-                    <div>
-                        <a href="#">
-                            Read More
-                        </a>
-                    </div>
-                </figcaption>
-                <span class="nimradius">
+        <section class="w-100 sdimg">
+            <section class="container mx-auto">
+                <figure class="position-relative  ">
+                    <img src="assets/img/person-edited-1.png" class="position-absolute imgabs " alt="">
+                    <figcaption class="position-absolute figabs">
+                        <h4>
+                            welcom to
+                        </h4>
+                        <h2>
+                            Town And Municipal Wordpress Theme
+                        </h2>
+                        <p>
+                            Beautifull neighborhoods , extraordinary schools , great resturant and a rich history make
+                            our
+                            city
+                        </p>
+                        <div>
+                            <a href="#">
+                                Read More
+                            </a>
+                        </div>
+                    </figcaption>
+                    <span class="nimradius">
 
-                </span>
+                    </span>
 
-            </figure>
+                </figure>
 
+            </section>
         </section>
     </main>
 
