--- a/sigma.html
+++ b/sigma.html
@@ -102,11 +102,12 @@
             </section>
 
         </header>
-        <section class="w-100 sdimg">
-            <section class="container mx-auto">
-                <figure class="position-relative  ">
-                    <img src="assets/img/person-edited-1.png" class="position-absolute imgabs " alt="">
-                    <figcaption class="position-absolute figabs">
+        <section class="w-100 sdimg  ">
+            <section class="container mx-auto position-relative preserve3d  h-100">
+
+                <figure class=" position-absolute top-0 z-3   d-flex justify-content-between align-items-center  h-100 ">
+                    
+                    <figcaption class=" figabs">
                         <h4>
                             welcom to
                         </h4>
@@ -124,11 +125,18 @@
                             </a>
                         </div>
                     </figcaption>
-                    <span class="nimradius">
-
-                    </span>
+                    <div class=" h-100 ">
+                        <img src="assets/img/person-edited-1.png" class=" imgabs " alt="">
+                    </div>
+                    
 
                 </figure>
+                <span class="nimradius">
+
+                </span>
+                <span class="nimBorder">
+
+                </span>
 
             </section>
         </section>
