--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
                         <li class="logoheader">Logo</li>
                         <li>
-                            <i class="bi bi-search" style="cursor: pointer;"></i>
+                            <i class="bi bi-search " style="cursor: pointer;" onclick="clicksearch(event)"></i>
                         </li>
                         
 
 
                     </ul>
 
-                    <div class="position-absolute end-0 w-25   z-3 ulabsbars">
+                    <div class="position-absolute end-0    z-3 ulabsbars">
                         <div class="w-100 d-flex align-items-center h-100 divinputbars">
                             <div class="d-flex align-items-center bordernavsearch">
                             <input type="text" placeholder="search..." class="inputsearch">
@@ -684,9 +684,10 @@
                         <div class="widths d-flex justify-content-center">
                             <figure class=" d-flex justify-content-end position-relative ">
                                 <img src="assets/img/slii-p1y0pnr64weq35fkq5r3ni5sduy4u023isyo0t82jc.jpg"
-                                    class="rounded-4 shadow-lg" alt="">
-                                <span class="position-absolute spansicons ">
-                                    <i class="bi bi-play"></i>
+                                    class="rounded-4 shadow-lg " alt="">
+                                    <video src="assets/video/6d64b5255654b5a1fd12240460eaa4ea14438751-720p.mp4" id="video"  controls class="starvideo" ></video>
+                                <span class="position-absolute spansicons " id="clickvideo">
+                                    <i class="bi bi-play " id="iconplay"></i>
                                 </span>
                             </figure>
                         </div>
