--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                     <nav class="d-flex justify-content-between w-100 px-5 px-md-0  position-relative">
                         <div class="d-flex d-lg-none justify-content-center align-items-center">
-                            <i class="bi bi-list menuLi"></i>
+                            <i class="bi bi-list menuLi py-3"></i>
                         </div>
                         <ul class=" d-none d-lg-flex ulnav2 align-items-center text-white ">
                             <li class="ms-2 zirmenu">
@@ -308,7 +308,7 @@
                                 <i class="bi bi-x-lg menuClose"></i>
 
                             </div>
-                            <li class="">
+                            <li class=" position-relative starli">
                                 <a class="d-flex text-white " href="#">
                                     <p>
                                         Home
@@ -316,22 +316,73 @@
                                     <i class="bi bi-chevron-down sizeicons"></i>
 
                                 </a>
+                                <ul class="position-absolute listul px-3 py-2">
+                                    <li>
+                                        <a href="">
+                                            Notices
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            Compile Version
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            Go to school
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
-                            <li>
+                            <li class="position-relative starli ">
                                 <a class="d-flex text-white" href="#">
                                     <p>
                                         Goverment
                                     </p>
                                     <i class="bi bi-chevron-down sizeicons"></i>
                                 </a>
+                                <ul class="position-absolute listul px-3 py-2">
+                                    <li>
+                                        <a href="">
+                                            Notices
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            Compile Version
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            Go to school
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
-                            <li>
+                            <li class="position-relative starli">
                                 <a class="d-flex text-white" href="#">
                                     <p>
                                         Resident
                                     </p>
                                     <i class="bi bi-chevron-down sizeicons"></i>
                                 </a>
+                                <ul class="position-absolute listul px-3 py-2">
+                                    <li>
+                                        <a href="">
+                                            Notices
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            Compile Version
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            Go to school
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                             <li>
                                 <a class="d-flex text-white " href="#">
